Update : Add advenced test in main of ex02 to test all possibl cases

--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -10,7 +10,7 @@ all: $(NAME)
 $(NAME): $(OBJ) 
 	$(CPP) $(CPPFLAGS) -o $(NAME) $(OBJ)
 
-%.o: %.cpp array.hpp
+%.o: %.cpp array.hpp array.tpp
 	$(CPP) $(CPPFLAGS) -c $< -o $@
 
 clean:
